sna: Only discard the CPU bo if we have a GPU bo to transfer the damage to

References: https://bugs.freedesktop.org/show_bug.cgi?id=79992
Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>